# cad-algo

./: Makefile  pyproject.toml
hw/1/: HW1_Armatage_Joaquin.py  HW1_TestCases_Armatage_Joaquin.py  Vrudhula_test_isTautology.py
hw/2/: HW2_Armatage_Joaquin.py  HW2_TestCases_Armatage_Joaquin.py
hw/3/: Test_Cover.py  Test_Match.py
hw/3/tech_map/: cell_lib.py  rooted_dag.py  tree_cover.py  tree_node.py
hw/4/: psuedo.txt
src/cad_algo/: __init__.py  bool_parser.py  bool_transformer.py  cube.py  max_size_list.py  sop.py  version.py
src/cad_algo/boolean/: __init__.py  algebra_typing.py  cofact.py  consensus.py  containment.py  cube.py  div.py  exceptions.py  factory.py  invert.py  literal.py  mul.py  parser.py  sop.py  transformer.py
src/cad_algo/cli/: __init__.py  cli.py
src/cad_algo/tech_map/: __init__.py  algorithms.py
src/cad_algo/techmap/: algorithms.py  cell_lib.py  rooted_dag.py  tree_cover.py  tree_node.py
tests/: __init__.py
